--- a/cog.yaml
+++ b/cog.yaml
@@ -1,16 +1,12 @@
+image: r8.im/hudson2231/ai-model-v2
+
 build:
   gpu: true
+  cuda: "12.1"
   python_version: "3.10"
-  python_packages:
-    - diffusers==0.24.0
-    - transformers==4.41.1
-    - torch==2.1.0
-    - torchvision==0.16.0
-    - opencv-python
-    - accelerate
-    - xformers
-    - safetensors
-    - Pillow
-    - numpy
+  python_requirements: requirements.txt
+  system_packages:
+    - "libgl1"
+    - "libglib2.0-0"
 
-predict: predict.py:Predictor
+predict: predict.py
