--- a/cog.yaml
+++ b/cog.yaml
@@ -1,12 +1,9 @@
-image: r8.im/hudson2231/ai-model-v2
-
 build:
   gpu: true
   cuda: "12.1"
   python_version: "3.10"
   python_requirements: requirements.txt
-  system_packages:
-    - "libgl1"
-    - "libglib2.0-0"
+  cog_runtime: true
+  image: "r8.im/hudson2231/ai-model-v2"
 
-predict: predict.py
+predict: model.py:Predictor
