--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-diffusers==0.24.0
-transformers==4.41.1
-torch==2.1.0
-torchvision==0.16.0
+torch==2.1.2
+transformers==4.31.0
+diffusers==0.21.4
+cog==0.7.3
+controlnet-aux==0.0.6
 opencv-python
-accelerate
-xformers
-safetensors
 Pillow
-numpy
